Fix letter spacing in dates, fix author, fix paths in images in posts

--- a/src/components/atoms/Date/styles.scss
+++ b/src/components/atoms/Date/styles.scss
@@ -11,6 +11,7 @@
     color: $black;
     margin: 0 20px 20px 0;
     line-height: .8;
+    letter-spacing: 0;
 
     &.a-listItem {
       font-size: 16px;
